build.incremental=false

[package]
name = "ledger-models"
# Should we rename this to fintekkers-ledger-models? Would make it 
# more Google-able

version = "0.0.0" 
# Will be overridden at build time. See .github/workflows/cargo-publish.yml
# In that workflow it dynamically overrides the cargo version in the toml
# As that change isn't checked into Github the publish command needs the --allow-dirty
# parameter. Feels like Rust is a little behind the times with the workflow tbh

edition = "2021"
authors = ["dado0583", "samiam376"]
license = "Apache-2.0"
description = "A comprehensive model library for financial products (securities, prices, transactions, etc). Protobuf used for serialization, with language-specific implementations"
readme = "README.md" # It is used at https://crates.io/crates/publish
repository = "https://github.com/fintekkers/ledger-models"
include = ["Cargo.toml", "**/*.rs", "ledger_models_file_descriptor_set_v_todo.bin"]

[[bin]]
name = "gen"
path= "gen.rs"

[lib]
path = "lib.rs"

[dependencies]
tonic = "0.9.0"
prost = "0.11.2"
prost-types = "0.11.2"
tonic-build = "0.9.0"
walkdir = "2"

##Used in all calculations. Equivalent of Java BigDecimal implementation
rust_decimal = "1.29.0"

chrono = "0.4.24" #Rust's most popular time package. Used for local date tiems
chrono-tz = "0.8.1" #Used to parse IANA timezones into offsets (E.g. America/New_York to -5)
iana-time-zone = "0.1.53" #Used to get the IANA formatted timezone across operating systems (e.g. America/New_York)

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",
    #    "v7",
    #    "js",
]
