[package]
name = "valuation-service"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the Valuation Service gRPC server
name = "valuation-service-server"
path = "src/server.rs"

[[bin]] # Bin to run the Valuation Service gRPC client
name = "valuation-service-client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.2"
tokio = {version = "1.22.0", features = ["rt-multi-thread"]}
tonic = "0.8.3"
rust-types = {path = "../rust-types"}
