[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fintekkers-ledger-models"
version = "0.0.1"
authors = [
  { name="David Doherty", email="dave@fintekkers.org" },
]
description = "Python implementation of Fintekkers models"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/FinTekkers/ledger-models"
"Bug Tracker" = "https://github.com/FinTekkers/ledger-models/issues"